--- a/hw-03.Rmd
+++ b/hw-03.Rmd
@@ -43,12 +43,12 @@ ggdag(dag) + theme_dag_blank()
 
 First of all, we find out **two** undirected paths from $X_2$ to $X_3$:
 
-1. The **first one**, going counterclockwise, is the path **$X_2 - X_1 - X_3$**. We notice immediatly that it's a common case ($X_2 \leftarrow X_1 \rightarrow X_3$) with the observed value $X_1$, hence, we have a blocked path. We can move on analyzing the second path.
+1. The **first one** is the path **$X_2 - X_1 - X_3$**. We notice immediatly that it's a common cause ($X_2 \leftarrow X_1 \rightarrow X_3$) where the observed value is $X_1$. Hence, we have a blocked path. We can move on analyzing the second path.
 
 
-2. The **second one**, going through the opposite way, is the path **$X_2 - X_6 - X_5 - X_3$**. The observed value in this case is $X_6$. We don't have any condition which states that the path is blocked. Indeed, we have that $X_6$ it's a collider ($X_2 \rightarrow X_6 \leftarrow X_5$), but since $X_6$ is the observed node, the condition is not verified. Moreover we have a chain ($X_3 \rightarrow X_5 \rightarrow X_6$) but $X_5$ is unobserved (we should have $X_6$ as "center" of the chain to satisfy the condition). Since we don't have any condition satisfied, the second path is not blocked.
+2. The **second one** is the path **$X_2 - X_6 - X_5 - X_3$**. The observed value in this case is $X_6$. Any condition doesn't hold. So the path is not blocked. In detail, we have that $X_6$ is a collider ($X_2 \rightarrow X_6 \leftarrow X_5$), but $X_6$ is observed node. The 3rd condition is not verified. Moreover we have a chain ($X_3 \rightarrow X_5 \rightarrow X_6$) but $X_5$ is unobserved (we should have $X_6$ as "center" of the chain to satisfy the condition). Since we don't have any condition satisfied, the second path is not blocked.
 
-We don't have all the paths blocked, hence we are not able to conclude that $X_2$ is d-separated from $X_3$ by $\{X_1,X_6\}$, thus the conditional independence is not satisfied.
+We don't have all the paths blocked, hence we are not able to conclude that $X_2$ is d-separated from $X_3$ by $\{X_1,X_6\}$, thus the conditional independence relation is not satisfied.
 
 ---
 
@@ -90,47 +90,30 @@ p(x_6 \lvert  x_1,x_2,x_3) = \frac{p(x_1 \lvert  x_2,x_3) \cdot p(x_6 \lvert  x_
 ---
 
 As extra, we provide a demonstration of the probability without using the conditional independence of $x_1$ and $x_6$.
+
+
 Using the Markov condition we can express the joint probability of our network as follows:
 
 \[
 p(x_1, x_2, x_3, x_4, x_5, x_6) = p(x_1) p(x_2 \lvert x_1) p(x_3 \lvert x_1) p(x_4 \lvert x_2) p(x_5 \lvert x_3) p(x_6 \lvert x_2, x_5)
 \]
 
-To pick the joint probability of the nodes that we want, we can just marginalize w.r.t. the nodes that we want to keep. For instance, for the set of nodes $\{x_1,x_2,x_3, x_6\}$ we will have:
-
-\begin{equation} 
-\begin{split}
-p(x_1, x_2, x_3, x_6) & = \sum_{x_4} \sum_{x_5} p(x_1) p(x_2 \lvert x_1) p(x_3 \lvert  x_1) p(x_4 \lvert x_2) p(x_5 \lvert x_3) p(x_6 \lvert x_2, x_5) \\
-& = p(x_1) p(x_2  \lvert x_1) p(x_3  \lvert  x_1) \sum_{x_4} p(x_4 \lvert x_2) \sum_{x_5} p(x_5 \lvert x_3) p(x_6 \lvert x_2, x_5) \\
-& = p(x_1) p(x_2  \lvert  x_1) p(x_3  \lvert  x_1) p(x_6  \lvert  x_2, x_5)
-\end{split}
-\end{equation}
-
-while for the set of nodes $\{x_2, x_3, x_6\}$, for example we have:
-
-\begin{equation} 
-\begin{split}
-p( x_2, x_3, x_6) & = \sum_{x_1} \sum_{x_4} \sum_{x_5} p(x_1) p(x_2  \lvert x_1) p(x_3  \lvert  x_1) p(x_4 \lvert x_2) p(x_5 \lvert x_3) p(x_6 \lvert x_2, x_5) \\
-& = \sum_{x_1} p(x_1) \cdot p(x_2  \lvert x_1) p(x_3  \lvert  x_1) \sum_{x_4} p(x_4 \lvert x_2) \sum_{x_5} p(x_5 \lvert x_3) p(x_6 \lvert x_2, x_5) \\
-& = p(x_2  \lvert  x_1) p(x_3  \lvert  x_1) p(x_6  \lvert  x_2, x_5)
-\end{split}
-\end{equation}
-
-With the same logic, we notice that $p(x_2,x_3) = p(x_2  \lvert  x_1) p(x_3  \lvert  x_1)$. 
-
-Now, assuming that picking $p(x_6  \lvert  x_{1:3})$, with the definition of conditional probability we have:
+Now, starting with the LHS of the equation $p(x_6  \lvert  x_{1:3})$, by the definition of conditional probability we have:
 
 \[
 p(x_6  \lvert  x_1,x_2,x_3) = \frac{p(x_1,x_2,x_3,x_6)}{p(x_1,x_2,x_3)} = \frac{p(x_1) p(x_2  \lvert  x_1) p(x_3  \lvert  x_1) p(x_6  \lvert  x_2, x_5)}{p(x_1) p(x_2  \lvert  x_1) p(x_3  \lvert  x_1)} = \frac{p(x_2  \lvert  x_1) p(x_3  \lvert  x_1) p(x_6  \lvert  x_2, x_5)}{p(x_2  \lvert  x_1) p(x_3  \lvert  x_1)}
 \]
 
-Using the equations we have observed, we will reach the conditional probability we are interested in:
+  * We notice that the numerator is the marginalization, of the joint distribution discribed by the graph, w.r.t. $x_1, x_4, x_5$. In formula:\[p(x_2 \lvert x_1) p(x_3 \lvert x_1) p(x_6 \lvert x_2, x_5) = \sum_{x_1} p(x_1) p(x_2 \lvert x_1) p(x_3 \lvert x_1) \sum_{x_4} p(x_4\lvert x_2) \sum_{x_5} p(x_5 \lvert x_3) p(x_6 \lvert x_2, x_5) = p(x_2, x_3, x_6)\]
 
+  * At the same time, the denominator is the marginalization, of the joint distribution described by the graph, w.r.t. $x_1, x_4, x_5, x_6$. In formula:\[p(x_2 \lvert x_1) p(x_3 \lvert x_1) = \sum_{x_1} p(x_1) p(x_2 \lvert x_1) p(x_3 \lvert x_1) \sum_{x_4} p(x_4 \lvert x_2)\sum_{x_5} p(x_5 \lvert x_3) \sum_{x_6}p(x_6 \lvert x_2, x_5) = p(x_2, x_3)\]
+
+Substituting in the main equation, we get:
 \[
-p(x_6  \lvert  x_1,x_2,x_3) = \frac{p(x_2  \lvert  x_1) p(x_3  \lvert  x_1) p(x_6  \lvert  x_2, x_5)}{p(x_2  \lvert  x_1) p(x_3  \lvert  x_1)} = \frac{p(x_2,x_3,x_6)}{p(x_2,x_3)} = p(x_6  \lvert  x_2, x_3)
+p(x_6  \lvert  x_1,x_2,x_3) = \frac{p(x_2,x_3,x_6)}{p(x_2,x_3)} = p(x_6  \lvert  x_2, x_3)
 \]
 
-We've obtained in a different way that $p(x_6  \lvert  x_{1:3}) = p(x_6 \lvert x_{2:3})$, thus that $x_6 \perp x_1  \lvert  x_2, x_3$.
+We have obtained $p(x_6  \lvert  x_{1:3}) = p(x_6 \lvert x_{2:3})$. Thus, by definition of conditional independence, $x_6 \perp x_1  \lvert  x_2, x_3$.
 
 ---
 
@@ -156,7 +139,7 @@ We start expressing the joint distribution of the DAG using the Markov condition
 f(\boldsymbol{\mu}, \sigma^2, X_1,X_2,Y_1,Y_2 ) = f(\boldsymbol{\mu})f(\sigma^2)f(X_1  \lvert  \mu_1,\sigma^2)f(X_2  \lvert  X_1, \mu_2,\sigma^2) f(Y_1  \lvert  \mu_1,\sigma^2) f(Y_2  \lvert Y_1,  \mu_2, \sigma^2)
 \]
 
-Since $\mu_1, \mu_2, \sigma^2$ are constants, their probability is 1. Moreover, with the assumptions we made about $\boldsymbol{X}$ and $\boldsymbol{Y}$, we notice that for both the random vectors $\boldsymbol{X}$ and $\boldsymbol{Y}$, we have a diagonal matrix $\Sigma$:
+Since $\mu_1, \mu_2, \sigma^2$ are constants, their probability is 1. Moreover, by the assumptions made on $\boldsymbol{X}$ and $\boldsymbol{Y}$, we notice that for both the random vectors $\boldsymbol{X}$ and $\boldsymbol{Y}$, we have a diagonal matrix $\Sigma$:
 
 \[
 \Sigma = 
@@ -166,7 +149,7 @@ Since $\mu_1, \mu_2, \sigma^2$ are constants, their probability is 1. Moreover, 
 \end{bmatrix}
 \]
 
-Hence, since we have i.e. that $X_1$ and $X_2$ are two r.v. that are jointly normally distributed, and since there's no correlation between them, we can conclude that they're also conditionally independent by $\boldsymbol{\mu}$ and $\sigma^2$. We have a similar situation with $Y_1$ and $Y_2$. So, at the end we have the following CI's:
+It means that there is no correlation between $X_1$ and $X_2$. We can conclude that they're also conditionally independent given $\boldsymbol{\mu}$ and $\sigma^2$. We have a similar situation with $Y_1$ and $Y_2$. So, in the end we have the following CI's:
 
 $X_1 \perp X_2 \mid \boldsymbol{\mu}, \sigma^2 \implies f(X_2 \mid X_1, \mu_2, \sigma^2) = f(X_2 \mid \mu_2, \sigma^2),$
 
@@ -182,14 +165,15 @@ f(\boldsymbol{\mu}, \sigma^2, X_1,X_2,Y_1,Y_2 ) = f(X_1  \lvert  \mu_1,\sigma^2)
 
 #### 2. Choose two suitable (prior) distributions for $\mu$ and $\sigma^2$ and write the corresponding R code to simulate a sample of $n$ = 10000 random vectors from the joint distribution by forward/ancestral sampling.
 
-Since we have no clue of what the distribution is, we need to choose two non-informative priors. So, we choose two flat priors, as we'll do in the part B of this homework. Therefore, for $\mu_1$ and $\mu_2$ we choose a normal distribution, with mean 0 and standard deviation 1000. Instead for sigma, which is a scalar value for the variance of each random variable, we use a gamma with shape 0.001 and rate 0.001, to make it non informative. Notice that $\sigma^2$ is positive, this means that its distribution must have only ***positive*** values; in this sense the gamma distribution is a suitable prior since its support is $\mathbb{R}_0^+$.
+Since we have no clue of what the distribution represents, we choose two non-informative / flat priors. For $\mu_1$ and $\mu_2$ we choose two normal distributions, with mean 0 and standard deviation 1000. Instead for sigma, which is a positive scalar value for the variance of each random variable, we need a distribution that has positive support. We pick a gamma with shape 0.001 and rate 0.001. 
 
 ```{r, fig.align='center', fig.width=10}
 n <- 10000 # sample size
 
 # initializing the matrix with the sampled values
-data <- matrix(data = NA, nrow=n, ncol=7)
-colnames(data) <- c('mu1', 'mu2', 'sigma2', 'x1', 'x2', 'y1', 'y2')
+cnames <- c('mu1', 'mu2', 'sigma2', 'x1', 'x2', 'y1', 'y2')
+data <- matrix(data = NA, nrow=n, ncol=length(cnames))
+colnames(data) <- cnames
 
 # defining our hyperparameters
 n.mu <- 0         # mu for N
